finished individual stories

--- a/aalto.bib
+++ b/aalto.bib
@@ -8341,6 +8341,21 @@
   file = {/home/avnerus/Zotero/storage/ZUZPAUFA/scholar.html}
 }
 
+@book{parrActiveInferenceFree2022,
+  title = {Active Inference: The Free Energy Principle in Mind, Brain, and Behavior},
+  shorttitle = {Active Inference},
+  author = {Parr, Thomas and Pezzulo, Giovanni and Friston, K. J.},
+  year = {2022},
+  publisher = {{The MIT Press}},
+  address = {{Cambridge, Massachusetts}},
+  abstract = {"A much-needed synthesis of active inference, a theory of mind that addresses cognition, behavior, intelligence, \& mental disorders and which can be extended to explain behavior in all living systems"--},
+  isbn = {978-0-262-04535-3},
+  langid = {english},
+  lccn = {BF311 .P31366 2022},
+  keywords = {Bayesian statistical decision theory,Human behavior models,Inference,Knowledge; Theory of,Neurobiology,Perception},
+  file = {/home/avnerus/Zotero/storage/LTI6R6BJ/Parr et al. - 2022 - Active inference the free energy principle in min.pdf}
+}
+
 @misc{PartialObjectNo2019,
   title = {Partial Object - {{No Subject}} - {{Encyclopedia}} of {{Psychoanalysis}} - {{Encyclopedia}} of {{Lacanian Psychoanalysis}}},
   year = {2019},
